--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^14.7.1",
-    "pg": "^8.8.0",
+    "node-fetch": "^2.6.7",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   }
